# swigged.llvm

./: .gitignore  .travis.yml  BuildAll.ps1  LICENSE  README.md  appveyor.yml  build.sh  swigged.llvm.sln
Examples/AndroidApp/: App1.sln.DotSettings
Examples/ConsoleApp1/: ConsoleApp1.sln
Examples/ConsoleApp2/: ConsoleApp2.sln
Examples/NetcoreApp/: Program.cs  sum.bc  test.csproj
_site/: manifest.json  xrefmap.yml
_site/api/: CSLLVM.DIDescriptor.html  CSLLVM.Intrinsics.html  CSLLVM.html  Swigged.LLVM.AtomicOrdering.html  Swigged.LLVM.AtomicRMWBinOp.html  Swigged.LLVM.AttributeRef.html  Swigged.LLVM.BasicBlockRef.html  Swigged.LLVM.BuilderRef.html  Swigged.LLVM.ByteOrdering.html  Swigged.LLVM.CallConv.html  Swigged.LLVM.CodeGenFileType.html  Swigged.LLVM.CodeGenOptLevel.html  Swigged.LLVM.CodeModel.html  Swigged.LLVM.ContextRef.html  Swigged.LLVM.DLLStorageClass.html  Swigged.LLVM.DiagnosticInfoRef.html  Swigged.LLVM.DiagnosticSeverity.html  Swigged.LLVM.ExecutionEngineRef.html  Swigged.LLVM.GenericValueRef.html  Swigged.LLVM.IntPredicate.html  Swigged.LLVM.LLVM.html  Swigged.LLVM.LandingPadClauseTy.html  Swigged.LLVM.Linkage.html  Swigged.LLVM.LinkerMode.html  Swigged.LLVM.MCJITCompilerOptions.html  Swigged.LLVM.MCJITMemoryManagerRef.html  Swigged.LLVM.MemoryBufferRef.html  Swigged.LLVM.MetadataRef.html  Swigged.LLVM.ModuleProviderRef.html  Swigged.LLVM.ModuleRef.html  Swigged.LLVM.MyString.html  Swigged.LLVM.ObjectFileRef.html  Swigged.LLVM.OpInfo1.html  Swigged.LLVM.OpInfoSymbol1.html  Swigged.LLVM.Opcode.html  Swigged.LLVM.OrcErrorCode.html  Swigged.LLVM.OrcJITStackRef.html  Swigged.LLVM.OrcModuleHandle.html  Swigged.LLVM.PassManagerBuilderRef.html  Swigged.LLVM.PassManagerRef.html  (+21 more)
llvm/: CMakeLists.txt  build-release-x64.ps1  build.sh  continue-build-debug-x64.ps1  more-debug-x64.ps1
nuget/: pack.bat  swigged.llvm.debug.nuspec  swigged.llvm.nuspec  swigged.llvm.targets
swig/: LLVM.i  LLVMCommon.i  generate.sh
swigged-llvm/: LLVM.i  LLVMCommon.i  MCJITCompilerOptions.i  SharpLLVM.sln  Swigged-LLVM.targets  default.tag  fix.sh  generate.bat  generate.sh  pack.bat  swigged-llvm.sln  swigged.llvm.nuspec  swigged.llvm.props  swigged.llvm.sln  swigged.llvm.targets  tests.sln  x  xxx.i
swigged-llvm/.nuget/: pack.bat  swigged.llvm.nuspec
swigged-llvm/.swig/: LLVM.i  generate.bat
swigged-llvm/App1/: App1.sln
swigged-llvm/AppNC11/: Program.cs
swigged-llvm/AppNC20/: AppNC20.csproj  Program.cs  sum.bc
swigged-llvm/AppNF45/: AppNF45.csproj  Program.cs
swigged-llvm/AppNF451/: AppNF451.csproj  Program.cs
swigged-llvm/AppNF452/: AppNF452.csproj  Program.cs
swigged-llvm/AppNF46/: AppNF46.csproj  Program.cs
swigged-llvm/AppNF461/: AppNF461.csproj  Program.cs  packages.config
swigged-llvm/AppNF462/: App.config  AppNF462.csproj  Program.cs  packages.config
swigged-llvm/AppNF47/: AppNF47.csproj  Program.cs  packages.config
swigged-llvm/ClassLibrary1/: Class1.cs
swigged-llvm/ConsoleApplication1/: ConsoleApplication1.csproj  Program.cs
swigged-llvm/SharpLLVM.Tests/: SharpLLVM.Tests.csproj  TestLLVM.cs
swigged-llvm/UnitTestProject1/: UnitTest1.cs  UnitTestProject1.csproj  packages.config
swigged-llvm/UnitTestProject2/: UnitTest1.cs  UnitTest2.cs  UnitTestProject2.csproj  packages.config
swigged-llvm/UnitTestProject3/: UnitTest1.cs  UnitTest3.cs  UnitTestProject3.csproj  packages.config
swigged-llvm/UnitTestProject4/: UnitTest1.cs  UnitTestProject4.csproj  packages.config
swigged-llvm/UnitTestProject5/: UnitTest1.cs  UnitTestProject5.csproj  packages.config
swigged-llvm/UnitTestProject6/: UnitTest1.cs  (+2 more)
swigged-llvm/swigged.llvm.native/: Additional.h  CMakeLists.txt  CMakeSettings.json  DebugInfo.h  LLVM_wrap.cpp  build.ps1  build.sh  makefile  swigged.llvm.native.sln  swigged.llvm.native.vcxproj
swigged.llvm/: AttributeRef.cs  CallConv.cs  DIFlags.cs  DLLStorageClass.cs  DWARFEmissionKind.cs  DWARFSourceLanguage.cs  DisasmContextRef.cs  InlineAsmDialect.cs  JITEventListenerRef.cs  LLVM.cs  LLVMPINVOKE.cs  Linkage.cs  LinkerMode.cs  MCJITCompilerOptions.cs  ModuleFlagBehavior.cs  Opcode.cs  OrcJITStackRef.cs  RealPredicate.cs  SharedObjectBufferRef.cs  TargetLibraryInfoRef.cs  TargetRef.cs  TypeKind.cs  UnnamedAddr.cs  ValueKind.cs  ValueRef.cs  VerifierFailureAction.cs  swigged.llvm.csproj
swigged.llvm.native/: CMakeLists.txt  LLVM_wrap.cpp  build-debug.ps1  build.ps1  build.sh  swigged.llvm.native.vcxproj
(+296 files in other folders)
